[gd_scene load_steps=2 format=3 uid="uid://hyluobb8xg14"]

[ext_resource type="Script" uid="uid://bgbhl4px0p20l" path="res://assets/Prefab_kinda/control.gd" id="1_awdjy"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_right = 320.0
offset_bottom = 478.0
grow_horizontal = 2
size_flags_horizontal = 4
script = ExtResource("1_awdjy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 153.0
offset_right = 89.0
offset_bottom = 331.0
grow_horizontal = 2
alignment = 1

[node name="Play_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit")
focus_neighbor_bottom = NodePath("../Options")
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Play_button")
focus_neighbor_bottom = NodePath("../quit")
text = "Options"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Play_button")
text = "Quit
"

[connection signal="button_down" from="VBoxContainer/Play_button" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="VBoxContainer/quit" to="." method="_on_quit_button_down"]
